--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,12 +1,19 @@
 .logo-text{
     font-family: Hyperion,sans-serif;
-    font-size: 40px;
+    font-size: 35px;
+    /*color: #ffffff;*/
     
 }
 #navbar .logo a{
     color: #fff;
 }
 
+#navbar.stick .logo a{
+    color: #1f1f1f ;
+}
+#navbar .navigation-menu > li > a {
+    font-size: 15px !important;
+}
 .bg-image{
     background-image: url(../images/bg-image-29.jpg);
     width: 100%;
@@ -98,6 +105,9 @@
     background-color: #060F1E ; 
 }
 
+.dark-bg{
+   background-color: #060F1E ;
+}
 #filters li.active{
     border-color: #1f1f1f !important;
     color: #1f1f1f !important;
