--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,75 +1,15 @@
 {% load static %}
-  <section class="last-section">
-
-          <div class="container">
-            <div class="col-md-12 col-sm-12">
-              <div class="title">
-                <h4>Напишите нам</h4>
-                <h2 >Остались вопросы?</h2>
-
-              </div>
-              <div class="row pt-25 pb-25">
-                <div class="container-fluid">
-                  <form id="contact-form" action="http://themes.hody.co/html/bezel/mail.php" method="POST">
-                    <div class="row">
-                        <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
-                          <label>Ваше имя</label>
-                          <input class="form-control" type="text" name="name" data-required="" >
-                        </div>
-                        <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
-                          <label>Компания</label>
-                          <input class="form-control" type="email" name="email" data-required="">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
-                          <label>Адрес электронной почты</label>
-                          <input class="form-control" type="text" name="name" data-required="">
-                        </div>
-                        <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
-                          <label>Телефон</label>
-                          <input class="form-control" type="email" name="email" data-required="">
-                        </div>
-                    </div>
-
-
-                    <div class="form-group animated fadeInRight" data-animation="fadeInRight">
-                      <label>Сообщение</label>
-                      <textarea class="form-control" name="message" data-required=""></textarea>
-                    </div>
-                    <div class="form-group mt-25 animated fadeInRight pull-right" data-animation="fadeInRight">
-                      <button class="btn btn-dark no-radius btn-lg" type="submit">Перезвоните мне</button>
-                      <button class="btn btn-dark-out upper no-radius btn-lg" type="submit">Отправить</button>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
       <footer id="footer">
-        <div class="container">
-           <div class="footer-btn">
-            <a class="btn btn-light-out upper no-radius btn-lg" href="#">Button</a>
-            <a class="btn btn-light-out upper no-radius btn-lg" href="#">Button</a>
-            <a class="btn btn-light-out upper no-radius btn-lg" href="#">Button</a>
-            <a class="btn btn-light-out upper no-radius btn-lg" href="#">Button</a>
-        </div>
-        </div>
-
-
         <div class="footer-copy">
           <div class="container">
             <div class="footer-copy-inner">
-              <div >
-
-                  <span class='logo-text'>wEbtOUCh</span>
-
+              <div style="display: flex; align-items: center" >
+                  <img style="width: 40px; margin-right: 10px" src="{% static 'images/logo-white.svg' %}" alt="">
+                  <span style="color: #ffffff" class='logo-text'>wEbtOUCh</span>
               </div>
               <div >
                 <div class="copy-text">
-                  <p>© 2017 Bezel. All rights reserved.</p>
+                  <p>© 2019 All rights reserved.</p>
                 </div>
               </div>
             </div>
