--- a/templates/header.html
+++ b/templates/header.html
@@ -3,8 +3,8 @@
         <div class="navbar-wrapper">
           <div class="container">
             <div class="logo">
-              <a href="index.html">
-                <span class='logo-text'>wEbtOUCh</span>
+              <a href="/">
+                <span  class='logo-text'>wEbtOUCh</span>
               </a>
             </div>
             <div class="menu-extras">
@@ -23,265 +23,28 @@
             </div>
             <div id="navigation">
               <ul class="navigation-menu nav">
-                <li class="menu-item-has-children has-megamenu">
-                  <a href="#">Home</a>
-                  <ul class="submenu megamenu">
-                    <li class="menu-item-has-children">
-                      <a class="menu-label" href="#">Home Pages I</a>
-                      <ul class="sub-menu">
-                        <li>
-                          <a href="index.html">Home Default</a>
-                        </li>
-                        <li>
-                          <a href="home-digital-agency.html">Home Digital Agency</a>
-                        </li>
-                        <li>
-                          <a href="home-creative-agency.html">Home Creative Agency</a>
-                        </li>
-                        <li>
-                          <a href="home-minimal.html">Home Minimal</a>
-                        </li>
-                        <li>
-                          <a href="home-business.html">Home Business</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a class="menu-label" href="#">Home Pages II</a>
-                      <ul class="sub-menu">
-                        <li>
-                          <a href="home-landing.html">Home Landing</a>
-                        </li>
-                        <li>
-                          <a href="home-architecture.html">Home Architecture</a>
-                        </li>
-                        <li>
-                          <a href="home-photography.html">Home Photography</a>
-                        </li>
-                        <li>
-                          <a href="home-resume.html">Home Resume</a>
-                        </li>
-                        <li>
-                          <a href="home-fitness.html">Home Fitness</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a class="menu-label" href="#">Home Pages III</a>
-                      <ul class="sub-menu">
-                        <li>
-                          <a href="home-portfolio.html">Home Portfolio</a>
-                        </li>
-                        <li>
-                          <a href="home-fashion.html">Home Fashion</a>
-                        </li>
-                        <li>
-                          <a href="home-one-page.html">Home One Page</a>
-                        </li>
-                        <li>
-                          <a href="home-restaurant.html">Home Restaurant</a>
-                        </li>
-                        <li>
-                          <a href="home-startup.html">Home Startup</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children"><a href="#">Pages</a>
+                <li class="menu-item">
+                  <a href="/">Главная</a></li>
+                <li class="menu-item-has-children"><a href="#">Услуги</a>
                   <ul class="submenu">
                     <li>
-                      <a href="page-about.html">About Us</a>
+                      <a href="#">Услуга 1</a>
                     </li>
                     <li>
-                      <a href="page-about-creative.html">About - Creative</a>
+                      <a href="#">Услуга 2</a>
                     </li>
                     <li>
-                      <a href="page-services.html">Services</a>
+                      <a href="#">Услуга 3</a>
                     </li>
                     <li>
-                      <a href="page-contact.html">Contact</a>
+                      <a href="#">Услуга 4</a>
                     </li>
-                    <li>
-                      <a href="page-careers.html">Careers</a>
-                    </li>
-                    <li>
-                      <a href="page-404.html">404 Page</a>
-                    </li>
+
                   </ul>
                 </li>
-                <li class="menu-item-has-children"><a href="#">Portfolio</a>
-                  <ul class="submenu">
-                    <li class="menu-item-has-children">
-                      <a href="#">Masonry</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="portfolio-masonry-2col.html">Two Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-masonry.html">Three Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-masonry-4col.html">Four Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-masonry-full.html">Full Width</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Grid</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="portfolio-grid-2col.html">Two Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-grid.html">Three Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-grid-4col.html">Four Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-grid-full.html">Full Width</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Titles Outside</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="portfolio-titles-2col.html">Two Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-titles.html">Three Columns</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-titles-4col.html">Four Columns</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Single Work</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="portfolio-single-1.html">Single Work 1</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-single-2.html">Single Work 2</a>
-                        </li>
-                        <li>
-                          <a href="portfolio-single-3.html">Single Work 3</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children"><a href="#">Blog</a>
-                  <ul class="submenu">
-                    <li class="menu-item-has-children">
-                      <a href="#">Grid</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="blog-grid.html">Standard Grid</a>
-                        </li>
-                        <li>
-                          <a href="blog-grid-sidebar.html">Sidebar Grid</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Standard</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="blog.html">Standard Layout</a>
-                        </li>
-                        <li>
-                          <a href="blog-sidebar.html">Sidebar Layout</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Single Post</a>
-                      <ul class="submenu">
-                        <li>
-                          <a href="blog-single.html">Standard Post</a>
-                        </li>
-                        <li>
-                          <a href="blog-single-sidebar.html">Sidebar Post</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children has-megamenu">
-                  <a href="#">Elements</a>
-                  <ul class="submenu megamenu">
-                    <li><a class="menu-label" href="#">Group 1</a>
-                      <ul class="sub-menu">
-                        <li>
-                          <a href="elements-accordions.html">Accordions</a>
-                        </li>
-                        <li>
-                          <a href="elements-buttons.html">Buttons</a>
-                        </li>
-                        <li>
-                          <a href="elements-carousels.html">Carousels</a>
-                        </li>
-                        <li>
-                          <a href="elements-forms.html">Forms</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li><a class="menu-label" href="#">Group 2</a>
-                      <ul class="sub-menu">
-                        <li>
-                          <a href="elements-icons.html">Icons</a>
-                        </li>
-                        <li>
-                          <a href="elements-icon-boxes.html">Icon Boxes</a>
-                        </li>
-                        <li>
-                          <a href="elements-message-boxes.html">Message Boxes</a>
-                        </li>
-                        <li>
-                          <a href="elements-pricing-tables.html">Pricing Tables</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li><a class="menu-label" href="#">Group 3</a>
-                      <ul class="sub-menu">
-                        <li>
-                          <a href="elements-progress-bars.html">Progress Bars</a>
-                        </li>
-                        <li>
-                          <a href="elements-galleries.html">Image Galleries</a>
-                        </li>
-                        <li>
-                          <a href="elements-tabs.html">Tabs</a>
-                        </li>
-                        <li>
-                          <a href="elements-typography.html">Typography</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children"><a href="#">Shop</a>
-                  <ul class="submenu">
-                    <li>
-                      <a href="shop.html">Products</a>
-                    </li>
-                    <li>
-                      <a href="shop-single.html">Single Product</a>
-                    </li>
-                    <li>
-                      <a href="shop-cart.html">Cart</a>
-                    </li>
-                    <li>
-                      <a href="shop-checkout.html">Checkout</a>
-                    </li>
-                  </ul>
-                </li>
+                <li class="menu-item"><a href="{% url 'portfolio' %}">Кейсы</a></li>
+                <li class="menu-item"><a href="{% url 'about' %}">О нас</a></li>
+                <li class="menu-item"><a href="{% url 'contacts' %}">Контакты</a></li>
               </ul>
             </div>
           </div>
