--- a/templates/pages/callback_form.html
+++ b/templates/pages/callback_form.html
@@ -38,8 +38,8 @@
                                 <textarea class="form-control" name="message" data-required=""></textarea>
                             </div>
                             <div class="form-group mt-25 animated fadeInRight pull-right" data-animation="fadeInRight">
-                                <button class="btn btn-dark no-radius btn-lg" type="submit">Перезвоните мне</button>
-                                <button class="btn btn-dark-out upper no-radius btn-lg" type="submit">Отправить</button>
+                                <button class="btn btn-dark upper no-radius btn-lg btn-full mb-20" type="submit">Перезвоните мне</button>
+                                <button class="btn btn-dark-out upper no-radius btn-lg btn-full mm0" type="submit">Отправить</button>
                             </div>
                         </form>
                     </div>
