--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -14,9 +14,10 @@
             <div class="slide-wrap dark-overlay">
               <div class="slide-content">
                 <div class="container">
-                  <h1 class="font-medium">Digital<br>Creative <span class="typed-words" data-strings="[&quot;Agency&quot;, &quot;Team&quot;, &quot;Products&quot;]"></span></h1>
+                  <h1 class="font-medium">Creative <span class="typed-words" data-strings="[&quot;Agency&quot;, &quot;Team&quot;, &quot;Products&quot;]"></span></h1>
                   <h4>Мы реализуем любые ваши пожелания в Web!</h4>
-                  <p><a class="btn btn-dark no-radius btn-lg" href="{% url 'portfolio' %}">Наши кейсы</a><a style="color: white;" class="btn btn-dark-out upper no-radius btn-lg" href="#callback_form" >Задать вопрос</a>
+                  <p><a class="btn btn-dark no-radius upper btn-lg btn-full mb-20" href="{% url 'portfolio' %}">Наши кейсы</a>
+                      <a style="color: white;" class="btn btn-dark-out upper no-radius btn-lg btn-full mm0" href="#callback_form" >Задать вопрос</a>
                   </p>
                 </div>
               </div>
