--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,7 +14,7 @@
     font-size: 15px !important;
 }
 .bg-image{
-    background-image: url(../images/bg-image-29.jpg);
+    background-image: url(../images/back.jpg);
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -109,3 +109,46 @@
 .icon-tabs.cols-4 > li {
     width: 24%;
 }
+
+@media (max-width: 990px) and (min-width: 0px){
+    #navbar .logo a {
+     color: #1f1f1f;
+    }
+
+    .btn-full{
+        width: 100%;
+    }
+
+    .mb-20{
+        margin-bottom: 20px;
+    }
+
+    .mm0{
+        margin: 0;
+    }
+}
+
+.btn-dark {
+    background-color: #060F1E;
+}
+
+.btn-dark:hover,
+.btn-dark:active {
+  color: #fff;
+  background-color: #060F1E;
+}
+.btn-dark:focus {
+  color: #fff;
+}
+.btn-dark-out {
+  color: #060F1E;
+  border-color: #060F1E;
+  background-color: transparent;
+}
+.btn-dark-out:hover,
+.btn-dark-out:active {
+  background-color: #060F1E;
+  border-color: #060F1E;
+  color: #fff;
+}
+
