--- a/templates/basic.html
+++ b/templates/basic.html
@@ -43,6 +43,7 @@
     </div>
     <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/bundle.js' %}"></script>
+      <script type="text/javascript" src="{% static 'js/formhelper.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/SmoothScroll.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery.mb.YTPlayer.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
