--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -153,3 +153,15 @@
   color: #fff;
 }
 
+.callback-form-result{
+    font-weight: 600;
+    color: #060f1e;
+    /*border: 1px solid #060f1e;*/
+    text-align: center;
+    padding: 10px 0 0;
+
+}
+
+.error-field{
+    color: red;
+}
