--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,3 +16,75 @@
           </div>
         </div>
       </footer>
+
+<script>
+
+    function sendFormStatic(type) {
+        if (type === 'callback'){
+            var btn = document.getElementById('callback_submit')
+            var btnText = 'Перезвоните мне'
+            var msg = 'Вам обязательно перезвонят'
+        }
+        if (type === 'send'){
+             var btn = document.getElementById('callback_submit_send')
+             var btnText = 'Отправить'
+            var msg = 'Вам обязательно ответят'
+        }
+    let csrfmiddlewaretoken = document.getElementsByName('csrfmiddlewaretoken')[0].defaultValue
+    let name = document.getElementsByName('name')[0]
+    let email = document.getElementsByName('email')[0]
+    let phone = document.getElementsByName('phone')[0]
+    let company = document.getElementsByName('company')[0]
+    let message = document.getElementsByName('message')[0]
+        let successMessage = document.getElementsByClassName('callback-form-result')[0]
+
+    btn.setAttribute('disabled', 'disabled');
+    btn.firstChild.data = 'Отправка ...'
+    successMessage.innerText= '';
+
+    let fd = new FormData();
+
+    fd.append('csrfmiddlewaretoken',csrfmiddlewaretoken)
+    fd.append('name',name.value)
+    fd.append('email',email.value)
+    fd.append('phone',phone.value)
+        fd.append('company',company.value)
+        fd.append('message',message.value)
+
+
+    let xhr = new XMLHttpRequest();
+    xhr.open('POST', '/callback/', true);
+    xhr.onload = function () {
+        console.log(this.response);
+        if (JSON.parse(this.response)['result'] === 'ok'){
+            document.getElementById('callbackForm_buttons').style.display= 'none'
+            successMessage.classList.remove("error-field");
+            successMessage.append(msg)
+        }
+        else{
+            btn.removeAttribute('disabled')
+            btn.firstChild.data = btnText
+            if (JSON.parse(this.response)['errors']['name']){
+                name.closest('div').classList.add('has-error')
+                successMessage.innerText= JSON.parse(this.response)['errors']['name']
+                successMessage.classList.add("error-field");
+
+            }
+            if (JSON.parse(this.response)['errors']['phone']){
+                phone.closest('div').classList.add('has-error')
+                successMessage.innerText= JSON.parse(this.response)['errors']['phone']
+                successMessage.classList.add("error-field");
+
+            }
+            if (JSON.parse(this.response)['errors']['email']){
+                email.closest('div').classList.add('has-error')
+                successMessage.innerText= JSON.parse(this.response)['errors']['email']
+                successMessage.classList.add("error-field");
+
+            }
+
+        }
+    };
+    xhr.send(fd);
+}
+</script>
