--- a/templates/pages/callback_form.html
+++ b/templates/pages/callback_form.html
@@ -10,37 +10,48 @@
                 </div>
                 <div class="row pt-25 pb-25">
                     <div class="container-fluid">
-                        <form id="contact-form" action="http://themes.hody.co/html/bezel/mail.php" method="POST">
+                        <form id="contact-form" onsubmit="return false;" method="post">{% csrf_token %}
                             <div class="row">
-                                <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
+                                <div class="col-md-6 col-sm-12 form-group  animated fadeInRight" data-animation="fadeInRight">
                                     <label>Ваше имя</label>
-                                    <input class="form-control" type="text" name="name" data-required="" >
+                                    <input class="form-control " type="text" name="{{ callbackForm.name.name }}" data-required="" >
                                 </div>
                                 <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
                                     <label>Компания</label>
-                                    <input class="form-control" type="email" name="email" data-required="">
+                                    <input class="form-control" type="email" name="{{ callbackForm.company.name }}" >
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
                                     <label>Адрес электронной почты</label>
-                                    <input class="form-control" type="text" name="name" data-required="">
+                                    <input class="form-control" type="email" name="{{ callbackForm.email.name }}" >
                                 </div>
                                 <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
                                     <label>Телефон</label>
-                                    <input class="form-control" type="email" name="email" data-required="">
+                                    <input class="form-control bfh-phone" type="text" data-format="+7 (ddd) ddd-dd-dd" name="{{ callbackForm.phone.name }}" required>
                                 </div>
                             </div>
+                                <input style="display: none;" type="checkbox" name="age" >
 
 
                             <div class="form-group animated fadeInRight" data-animation="fadeInRight">
                                 <label>Сообщение</label>
-                                <textarea class="form-control" name="message" data-required=""></textarea>
+                                <textarea class="form-control" name="{{ callbackForm.message.name }}" ></textarea>
                             </div>
-                            <div class="form-group mt-25 animated fadeInRight pull-right" data-animation="fadeInRight">
-                                <button class="btn btn-dark upper no-radius btn-lg btn-full mb-20" type="submit">Перезвоните мне</button>
-                                <button class="btn btn-dark-out upper no-radius btn-lg btn-full mm0" type="submit">Отправить</button>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="callback-form-result "></div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div id="callbackForm_buttons" class="form-group  animated fadeInRight pull-right" data-animation="fadeInRight">
+                                        <button id="callback_submit" class="btn btn-dark upper no-radius btn-lg btn-full mb-20" onclick="sendFormStatic('callback');" type="submit">Перезвоните мне</button>
+                                        <button id="callback_submit_send" class="btn btn-dark-out upper no-radius btn-lg btn-full mm0" onclick="sendFormStatic('send');" type="submit">Отправить</button>
+                                    </div>
+                                </div>
+
                             </div>
+
                         </form>
                     </div>
                 </div>
