--- a/templates/basic.html
+++ b/templates/basic.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/bundle.css'%} ">
     <link rel="stylesheet" href="{% static 'css/hody-icons.css'%}">
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
-    <link rel="stylesheet" href="{% static 'css/custom.css'%}">
+    <link rel="stylesheet" href="{% static 'css/new.css'%}">
 
   </head>
 
