--- a/templates/pages/callback_form.html
+++ b/templates/pages/callback_form.html
@@ -28,10 +28,10 @@
                                 </div>
                                 <div class="col-md-6 col-sm-12 form-group animated fadeInRight" data-animation="fadeInRight">
                                     <label>Телефон</label>
-                                    <input class="form-control bfh-phone" type="text" data-format="+7 (ddd) ddd-dd-dd" name="{{ callbackForm.phone.name }}" required>
+                                    <input class="form-control bfh-phone" type="text" data-format="d ddd ddd-dd-dd" name="{{ callbackForm.phone.name }}" required>
                                 </div>
                             </div>
-                                <input style="display: none;" type="checkbox" name="age" >
+                                <input style="display: none;" type="checkbox" name="agree"  >
 
 
                             <div class="form-group animated fadeInRight" data-animation="fadeInRight">
