--- a/templates/pages/price.html
+++ b/templates/pages/price.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-   <section class="page-title parallax-section portfolio-item-head">
+   <section class="page-title parallax-section portfolio-item-head small-section">
         <div class="row-parallax-bg">
           <div class="parallax-wrapper">
             <div class="parallax-bg">
