--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,7 +9,7 @@
                 </div>
                 <div >
                     <div class="copy-text">
-                        <p>© 2019 All rights reserved.</p>
+                        <p>© 2019. WebTouch. Все права защищены.</p>
                     </div>
                 </div>
             </div>
