--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -14,10 +14,10 @@
             <div class="slide-wrap dark-overlay">
               <div class="slide-content">
                 <div class="container">
-                  <h1 class="font-medium">Creative <span class="typed-words" data-strings="[&quot;Agency&quot;, &quot;Team&quot;, &quot;Products&quot;]"></span></h1>
+                  <h1 class="font-medium">Digital <span class="typed-words" data-strings="[&quot;Agency&quot;, &quot;Products&quot;, &quot;Solutions&quot;, &quot;Apps&quot;]"></span></h1>
                   <h4>Мы реализуем любые ваши пожелания в Web!</h4>
-                  <p><a class="btn btn-dark no-radius upper btn-lg btn-full mb-20" href="{% url 'portfolio' %}">Наши кейсы</a>
-                      <a style="color: white;" class="btn btn-dark-out upper no-radius btn-lg btn-full mm0" href="#callback_form" >Задать вопрос</a>
+                  <p><a class="btn btn-light upper btn-lg btn-full mb-20" href="{% url 'portfolio' %}">Наши кейсы</a>
+                      <a  class="btn btn-light upper  btn-lg btn-full mm0" href="#callback_form" >Задать вопрос</a>
                   </p>
                 </div>
               </div>
@@ -28,8 +28,8 @@
       <section class="section">
         <div class="container">
           <div class="title text-center">
-            <h4 class="upper">Handcrafting web & mobile apps</h4>
-            <h2>Reinvent The Web</h2>
+
+            <h2>Как мы работаем?</h2>
           </div>
           <div class="section-content pt-25 pb-25">
             <div class="row">
@@ -37,7 +37,7 @@
                 <div class="icon-box align-center">
                   <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/pencil-ruler.svg' %} " data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
-                    <h4>Product Design</h4>
+                    <h4>Работаем до полного утверждения!</h4>
                     <p>Assumenda non repellendus distinctio nihil dicta sapiente, quibusdam maiores, illum at, aliquid blanditiis eligendi qui.</p>
                   </div>
                 </div>
