--- a/templates/basic.html
+++ b/templates/basic.html
@@ -14,8 +14,8 @@
     <link rel="shortcut icon" href="{% static 'images/favicon-32x32.png' %}">
     <link rel="stylesheet" href="{% static 'css/bundle.css'%} ">
     <link rel="stylesheet" href="{% static 'css/hody-icons.css'%}">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-    <link rel="stylesheet" href="{% static 'css/new.css'%}">
+    <link rel="stylesheet" href="{% static 'css/style1.css'%}">
+    <link rel="stylesheet" href="{% static 'css/new1.css'%}">
 
   </head>
 
