--- a/templates/pages/callback_form.html
+++ b/templates/pages/callback_form.html
@@ -45,8 +45,8 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div id="callbackForm_buttons" class="form-group  animated fadeInRight pull-right" data-animation="fadeInRight">
-                                        <button id="callback_submit" class="btn btn-dark upper no-radius btn-lg btn-full mb-20" onclick="sendFormStatic('callback');" type="submit">Перезвоните мне</button>
-                                        <button id="callback_submit_send" class="btn btn-dark-out upper no-radius btn-lg btn-full mm0" onclick="sendFormStatic('send');" type="submit">Отправить</button>
+                                        <button id="callback_submit" class="btn btn-dark   btn-lg btn-full mb-20" onclick="sendFormStatic('callback');" type="submit">Перезвоните мне</button>
+                                        <button id="callback_submit_send" class="btn btn-dark   btn-lg btn-full mm0" onclick="sendFormStatic('send');" type="submit">Отправить</button>
                                     </div>
                                 </div>
 
