--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -16,8 +16,8 @@
                 <div class="container">
                   <h1 class="font-medium">Digital <span class="typed-words" data-strings="[&quot;Agency&quot;, &quot;Products&quot;, &quot;Solutions&quot;, &quot;Apps&quot;]"></span></h1>
                   <h4>Мы реализуем любые ваши пожелания в Web!</h4>
-                  <p><a class="btn btn-light upper btn-lg btn-full mb-20" href="{% url 'portfolio' %}">Наши кейсы</a>
-                      <a  class="btn btn-light upper  btn-lg btn-full mm0" href="#callback_form" >Задать вопрос</a>
+                  <p><a class="btn btn-light upper btn-full mb-20" href="{% url 'portfolio' %}">Наши кейсы</a>
+                      <a  class="btn btn-light upper   btn-full mm0" href="#callback_form" >Задать вопрос</a>
                   </p>
                 </div>
               </div>
@@ -29,34 +29,34 @@
         <div class="container">
           <div class="title text-center">
 
-            <h2>Как мы работаем?</h2>
+            <h2 class="our-dark-blue">Как мы работаем?</h2>
           </div>
           <div class="section-content pt-25 pb-25">
             <div class="row">
               <div class="col-md-4">
                 <div class="icon-box align-center">
-                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/pencil-ruler.svg' %} " data-gradients="#ff795f,#ce1768"></div>
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/1.svg' %} " data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
-                    <h4>Работаем до полного утверждения!</h4>
-                    <p>Assumenda non repellendus distinctio nihil dicta sapiente, quibusdam maiores, illum at, aliquid blanditiis eligendi qui.</p>
+                    <h4>Оплата после результата</h4>
+                    <p>Мы считаем, что доверие клиента нужно заслуживать! Процесс разработки делится на несколько этапов, и мы берем предоплату только после первого этапа, когда клиент уже увидел первые результаты нашего труда.</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="icon-box align-center">
-                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/pencil-ruler.svg' %}" data-gradients="#ff795f,#ce1768"></div>
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/2.svg' %}" data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
-                    <h4>Content Marketing</h4>
-                    <p>Assumenda non repellendus distinctio nihil dicta sapiente, quibusdam maiores, illum at, aliquid blanditiis eligendi qui.</p>
+                    <h4>Поддержка клиентов 24\7</h4>
+                    <p>Мы оказываем услугу поддержки и отвечаем за работоспособность и безотказность наших продуктов 24\7</p>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="icon-box align-center">
-                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/pencil-ruler.svg' %}" data-gradients="#ff795f,#ce1768"></div>
+                  <div class="animated-icon gradient-icon" data-icon="{% static 'images/icons/3.svg' %}" data-gradients="#ff795f,#ce1768"></div>
                   <div class="ib-content">
-                    <h4>Digital Strategy</h4>
-                    <p>Assumenda non repellendus distinctio nihil dicta sapiente, quibusdam maiores, illum at, aliquid blanditiis eligendi qui.</p>
+                    <h4>До полного утверждения</h4>
+                    <p>Мы вносим неограниченное количество правок и доработок, пока клиент не будет доволен на 100% полученным результатом</p>
                   </div>
                 </div>
               </div>
@@ -67,10 +67,8 @@
       <section class="dark-bg section">
           <div class="container">
             <div class="title">
-              <h4 class="upper">Expertise</h4>
-              <h2>Our Services</h2>
-              <p class="fw-300">We are an innovative agency. We develop and design <span class="typed-words fw-400" data-strings="[&quot;apps&quot;, &quot;websites&quot;, &quot;softwares&quot;]" data-custom-color="#e42869"></span>for
-                <br>costumers around the world. Our clients are some of the most forward-looking companies in the world.</p>
+              <h2>Наши Услуги</h2>
+              <p class="fw-300">Мы занимаемся разработкой как простых и типовых решений, так и неординарных и необычных продуктов. Если у вас какая-то необычная идея или разработка, то вы по адресу! Напишите нам на почту или позвоните, мы с радостью вас проконсультируем и обсудим возможные решения!</p>
             </div>
             <div class="section-content pt-25 pb-25">
               <div class="row">
@@ -123,8 +121,8 @@
       <section class="section " >
         <div class="container mb-50">
           <div class="title text-center">
-                    <h4 class="upper">Handcrafting web & mobile apps</h4>
-                    <h2>Reinvent The Web</h2>
+
+                    <h2 class="our-dark-blue">Наши последние работы</h2>
                   </div>
 
         </div>
@@ -153,7 +151,7 @@
             </div>
           </div>
           <div class="see-more-btn">
-              <a class="btn btn-dark-out upper no-radius btn-lg" href="{% url 'portfolio' %}">Все кейсы</a>
+              <a class="btn btn-light upper" href="{% url 'portfolio' %}">Все кейсы</a>
           </div>
         </div>
       </section>
@@ -235,97 +233,6 @@
           </div>
         </section>
 
-      <section class="grey-bg">
-        <div class="container">
-          <div class="title text-center">
-            <h4 class="upper">We are digital thinkers</h4>
-            <h2>Creative Team</h2>
-          </div>
-          <div class="section-content pt-25 pb-25">
-            <div class="row">
-              <div class="col-md-3 col-sm-6">
-                <div class="team-member" data-animation="fadeInUp">
-                  <div class="team-image">
-                    <img src="{% static 'images/team-1.jpg' %}" alt="">
-                  </div>
-                  <div class="team-overlay" data-custom-bg="#1f1f1f">
-                    <div class="team-info">
-                      <h4>Luke Cage</h4><span>Founder & CEO</span>
-                      <ul class="team-social">
-                        <li><a href="#" target="_blank"><i class="hc-facebook"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-twitter"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-linkedin"></i></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="team-member" data-animation="fadeInUp" data-delay="300">
-                  <div class="team-image">
-                    <img src="{% static 'images/team-2.jpg' %}" alt="">
-                  </div>
-                  <div class="team-overlay" data-custom-bg="#1f1f1f">
-                    <div class="team-info">
-                      <h4>Jessica Jones</h4><span>Product Designer</span>
-                      <ul class="team-social">
-                        <li><a href="#" target="_blank"><i class="hc-facebook"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-twitter"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-linkedin"></i></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="team-member" data-animation="fadeInUp" data-delay="600">
-                  <div class="team-image">
-                    <img src="{% static 'images/team-3.jpg' %}" alt="">
-                  </div>
-                  <div class="team-overlay" data-custom-bg="#1f1f1f">
-                    <div class="team-info">
-                      <h4>Matt Murdock</h4><span>Lead Developer</span>
-                      <ul class="team-social">
-                        <li><a href="#" target="_blank"><i class="hc-facebook"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-twitter"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-linkedin"></i></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-3 col-sm-6">
-                <div class="team-member" data-animation="fadeInUp" data-delay="900">
-                  <div class="team-image">
-                    <img src="{% static 'images/team-4.jpg' %}" alt="">
-                  </div>
-                  <div class="team-overlay" data-custom-bg="#1f1f1f">
-                    <div class="team-info">
-                      <h4>Claire Temple</h4><span>Sales Manager</span>
-                      <ul class="team-social">
-                        <li><a href="#" target="_blank"><i class="hc-facebook"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-twitter"></i></a>
-                        </li>
-                        <li><a href="#" target="_blank"><i class="hc-linkedin"></i></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
     {% include 'pages/callback_form.html' %}
 {% endblock %}
