--- a/templates/pages/portfolio.html
+++ b/templates/pages/portfolio.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <section class="page-title parallax-section portfolio-item-head small-section">
+    <section class="page-title parallax-section portfolio-item-head">
         <div class="row-parallax-bg">
           <div class="parallax-wrapper">
             <div class="parallax-bg">
