--- a/static/css/new.css
+++ b/static/css/new.css
@@ -9,12 +9,15 @@
 }
 
 #navbar.stick .logo a{
-    color: #1f1f1f ;
+    color: #060F1E ;
 }
 #navbar .navigation-menu > li > a {
     font-size: 15px !important;
 }
 
+.our-dark-blue{
+    color: #060F1E !important;
+}
 
 .bg-image{
     background-image: url(../images/back.jpg);
@@ -31,7 +34,7 @@
 }
 
 #navbar.stick .logo a {
-    color: #1f1f1f !important;
+    color: #060F1E !important;
 }
 
 .footer-copy-inner{
@@ -115,7 +118,7 @@
 
 @media (max-width: 990px) and (min-width: 0px){
     #navbar .logo a {
-     color: #1f1f1f;
+     color: #060F1E;
     }
 
     .btn-full{
@@ -127,7 +130,7 @@
     }
 
     .mm0{
-        margin: 0;
+        margin: 0 !important;
     }
 }
 
