--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2788,7 +2788,7 @@ section.gradient-bg:not([data-gradients]) {
     height: auto;
   }
   #navbar.stick .navigation-menu > li > a {
-    color: #242424;
+    color: #060F1E;
     /* padding-top: 20px;
     padding-bottom: 20px; */
   }
@@ -2899,7 +2899,7 @@ section.gradient-bg:not([data-gradients]) {
     clear: both;
     line-height: 1.4;
     white-space: nowrap;
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 0.03em;
     color: #787878;
     font-family: 'MagistralC', sans-serif;
