--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                 <li class="menu-item-has-children"><a href="#">Услуги</a>
                   <ul class="submenu">
                     <li>
-                      <a href="#">Услуга 1</a>
+                      <a href="#">Создание сайтов</a>
                     </li>
                     <li>
                       <a href="#">Услуга 2</a>
