--- a/templates/pages/price.html
+++ b/templates/pages/price.html
@@ -32,34 +32,45 @@
     <div class='all-our-works'>
         <div class='all-our-works-inner'>
             <div class='all-our-works-item'>
+                <a href="{% url 'createlanding' %}"></a>
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
                 <p>Текст2</p>
             </div>
             <div class='all-our-works-item'>
+                <a href="#">
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
                 <p>Текст2</p>
+                </a>
             </div>
             <div class='all-our-works-item'>
+                <a href="#">
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
                 <p>Текст2</p>
+                </a>
             </div>
             <div class='all-our-works-item'>
+                <a href="#">
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
                 <p>Текст2</p>
+                </a>
             </div>
             <div class='all-our-works-item'>
+                <a href="#">
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
                 <p>Текст2</p>
+                </a>
             </div>
             <div class='all-our-works-item'>
+                <a href="#">
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
                 <p>Текст2</p>
+                </a>
             </div>
 
         </div>
