--- a/static/css/new4.css
+++ b/static/css/new4.css
@@ -188,17 +188,32 @@
     z-index: 1000;
     background-color: #f7f7f7;
     padding: 31%;
+    transition: all 0.5s ease;
+
 }
 
 .all-our-works-item:hover{
     box-shadow: 0px 1px 7px 1px #00000045;
     background-color: #fff;
-    cursor: pointer
+    transform: scale(1.09);
+    z-index: 1003;
+
 }
 .all-our-works-item p{
     font-size: 14px;
     color: #060F1E;
 }
+
+.all-our-works-item-active{
+    background-color: #fff;
+}
+
+.all-our-works-item-active:hover{
+    box-shadow: none;
+    transform: none;
+    background-color: #fff;
+}
+
 
 @media screen and (max-width: 1199px ){
     .all-our-works-inner{
