--- a/templates/header.html
+++ b/templates/header.html
@@ -31,13 +31,13 @@
                       <a href="{% url 'createlanding' %}">Создание сайтов</a>
                     </li>
                     <li>
-                      <a href="#">Услуга 2</a>
+                      <a href="{% url 'createlanding' %}">Услуга 2</a>
                     </li>
                     <li>
-                      <a href="#">Услуга 3</a>
+                      <a href="{% url 'createlanding' %}">Услуга 3</a>
                     </li>
                     <li>
-                      <a href="#">Услуга 4</a>
+                      <a href="{% url 'createlanding' %}">Услуга 4</a>
                     </li>
 
                   </ul>
