--- a/templates/pages/price.html
+++ b/templates/pages/price.html
@@ -38,38 +38,38 @@
                 <p>Текст2</p>
             </div>
             <div class='all-our-works-item'>
-                <a href="#">
-                <img src="{% static 'images/banknote.svg' %}">
-                <p>Текст1</p>
-                <p>Текст2</p>
+                <a href="{% url 'createblog' %}">
+                    <img src="{% static 'images/banknote.svg' %}">
+                    <p>Текст1</p>
+                    <p>Текст2</p>
                 </a>
             </div>
             <div class='all-our-works-item'>
-                <a href="#">
-                <img src="{% static 'images/banknote.svg' %}">
-                <p>Текст1</p>
-                <p>Текст2</p>
+                <a href="{% url 'createservice' %}">
+                    <img src="{% static 'images/banknote.svg' %}">
+                    <p>Текст1</p>
+                    <p>Текст2</p>
                 </a>
             </div>
             <div class='all-our-works-item'>
-                <a href="#">
-                <img src="{% static 'images/banknote.svg' %}">
-                <p>Текст1</p>
-                <p>Текст2</p>
+                <a href="{% url 'createshop' %}">
+                    <img src="{% static 'images/banknote.svg' %}">
+                    <p>Текст1</p>
+                    <p>Текст2</p>
                 </a>
             </div>
             <div class='all-our-works-item'>
-                <a href="#">
-                <img src="{% static 'images/banknote.svg' %}">
-                <p>Текст1</p>
-                <p>Текст2</p>
+                <a href="{% url 'createforum' %}">
+                    <img src="{% static 'images/banknote.svg' %}">
+                    <p>Текст1</p>
+                    <p>Текст2</p>
                 </a>
             </div>
             <div class='all-our-works-item'>
-                <a href="#">
-                <img src="{% static 'images/banknote.svg' %}">
-                <p>Текст1</p>
-                <p>Текст2</p>
+                <a href="{% url 'createcrm' %}">
+                    <img src="{% static 'images/banknote.svg' %}">
+                    <p>Текст1</p>
+                    <p>Текст2</p>
                 </a>
             </div>
 
