--- a/static/css/style3.css
+++ b/static/css/style3.css
@@ -147,7 +147,7 @@ h4,
 h5,
 h6 {
   font-family: 'MagistralC', sans-serif;
-  color: #1f1f1f;
+  color: #060F1E;
   line-height: 1.3;
   letter-spacing: 1.2px;
 }
