--- a/templates/pages/price.html
+++ b/templates/pages/price.html
@@ -31,7 +31,7 @@
     </section>
     <div class='all-our-works'>
         <div class='all-our-works-inner'>
-            <div class='all-our-works-item'>
+            <div class='all-our-works-item all-our-works-item-active'>
                 <a href="{% url 'createlanding' %}"></a>
                 <img src="{% static 'images/banknote.svg' %}">
                 <p>Текст1</p>
